fixed background color for pop ups on firefox

--- a/sanctuary-react/src/assets/styling/_modal.scss
+++ b/sanctuary-react/src/assets/styling/_modal.scss
@@ -4,14 +4,19 @@
     left: 0;
     right: 0;
     bottom: 0;
-    backdrop-filter: blur(20px) brightness(0.7);
-    
 
     display: flex;
     align-items: center;
     justify-content: center;
 
     z-index: 10;
+
+    backdrop-filter: blur(20px) brightness(0.7);
+    -webkit-backdrop-filter: blur(20px) brightness(0.7); 
+
+    @supports not (backdrop-filter: blur(20px)) {
+        background-color: rgba(100, 100, 100, 0.85);
+    } 
 }
 
 .closeButton {
